[package]
name = "mogotip"
version = "0.1.0"
edition = "2021"
description = "Get a loading screen tip about Mogo the lord."
license = "MIT"
repository = "https://github.com/notken12/mogotip"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
